--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,9 @@ h1 {
 }
 
 body {
-  background-color: linear-gradient(
+  background: linear-gradient(
     to left,
-    rgba(7, 27, 82, 1) 0%,
-    rgba(0, 128, 128, 1) 100%
+    rgba(7, 27, 82, 1),
+    rgba(0, 128, 128, 1)
   );
 }
